# GoRust

./: \  go.mod
auto_escape/: go.mod  main.go
bank_programs/: go.mod  main.go
bytecounter/: go.mod  main.go
ch11/: go.mod
ch12/: go.mod  main.go
ch9/: go.mod
clock1/: clock1  go.mod  main.go
clock2/: clock2  go.mod  main.go
clousure_pitfall/: closure_pitfall  main.go
countdown1/: go.mod  main.go
countdown2/: go.mod  main.go
countdown3/: go.mod  main.go
crawl1/: go.mod  main.go
crawl2/: go.mod  main.go
crawl3/: go.mod  main.go
du1/: go.mod
du2/: du2  go.mod  main.go
du3/: du3  go.mod  main.go
employes/: go.mod  main.go
eval/: eval.go  go.mod  main.go
findlinks1/: findlinks1  go.mod  rust_fetch
findlinks3/: go.mod  main.go
github/: go.mod  main.go
http1/: go.mod  main.go
http2/: go.mod  main.go
http3/: go.mod  main.go
http3a/: go.mod  main.go
http4/: go.mod  main.go
inset/: go.mod  main.go
issues_html/: go.mod  issues.html  main.go
issues_report/: go.mod  main.go
links/: go.mod  main.go
netcat1/: go.mod  main.go  netcat1
netcat2/: go.mod  netcat2
netcat3/: go.mod  main.go
pipeline1/: go.mod  main.go
pipeline2/: go.mod  main.go
pipeline3/: go.mod
playground/rust_playground/: Cargo.toml
playground/rust_playground/src/: main.rs
reverb1/: go.mod  main.go  reverb1
server1/rust_server1/: Cargo.toml
server1/rust_server1/src/: lib.rs  main.rs
sleep/: go.mod  sleep
sorting_music_track/: go.mod  main.go
sorting_with_interface/: go.mod  main.go
space_math/: go.mod  main.go
spinner/: go.mod  (+1 more)
(+165 files in other folders)
