[package]
name = "rust_playground"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["full"] }
